--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-spring": "^9.3.1",
     "react-tsparticles": "^1.37.3",
     "web-vitals": "^1.1.2"
   },
